[tool.poetry]
name = "account-analysis"
version = "0.1.0"
description = ""
authors = ["Javier <javier@simplekyc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
streamlit = "^1.38.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
